--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
     <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#">
+          <a class="brand" href="/">
             Monash Club Registration
           </a>
           <ul class="nav">
