--- a/register.html
+++ b/register.html
@@ -96,7 +96,7 @@
       </div>
       <div class="control-group">
         <label for="phonenumber">
-          Phone Number*
+          Phone Number
         </label>
         <input id="phonenumber" name="phonenumber" type="">
       </div>
