--- a/viewEventAttendees.html
+++ b/viewEventAttendees.html
@@ -37,52 +37,21 @@
           <a class="brand" href="/">
             Monash Club Registration
           </a>
-          
+          <ul class="nav">
+          </ul>
         </div>
       </div>
     </div>
-	<form action="/addEventSubmit?%s" method="post">
-
     <div class="container">
       <div>
         <h1>
-          Add Event
+		{{ nameOfEvent }}
         </h1>
         <p>
-          &nbsp;
+		{{ table }}
         </p>
       </div>
-	  {% if error %}
-        <p>
-			<font color="red">
-				{{ error }}
-			</font>
-		</p>
-      {% endif %}
-      <div class="control-group">
-		<label for="eventname">
-          Event Name
-        </label>
-        <input id="eventname" name="eventname" type="">
-		<label for="date">
-          Date
-        </label>
-		<input id="date" name="date" type="">
-		<label for="date">
-          Location
-        </label>
-		<input id="location" name="location" type="">
-		<label for="selectinput1">
-          Club
-        </label>
-        <select name="clubinput" id="clubinput">
-			{{ clubs }}
-        </select>
-      </div>
-	  <div><input type="submit" value="Submit"></div>
     </div>
-	</form>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
     </script>
     <script src="assets/js/bootstrap.js">
