--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             Add new person.
           </a>
           <br>
+		  <a class="title  imgScanned click" href="/addMSACard">
+            Add MSA Card To Person
+          </a>
+          <br>
           <a class="title  imgScanned click" href="/addClub">
             Add club
           </a>
