Added checks for duplication, etc
Overhauled event + club view.

--- a/register.html
+++ b/register.html
@@ -94,6 +94,12 @@
         </label>
         <input id="email" name="email" type="">
       </div>
+	  <div class="control-group">
+        <label for="address">
+          Address*
+        </label>
+        <input id="address" name="address" type="">
+      </div>
       <div class="control-group">
         <label for="phonenumber">
           Phone Number
@@ -105,17 +111,17 @@
           Campus
         </label>
         <select name="campus" id="campus">
-			<option value="1">'Clayton'</option>'
-			<option value="2">'Caulfield'</option>'
-			<option value="3">'Peninsula'</option>'
- 			<option value="4">'Parkville'</option>'
-			<option value="5">'Gippsland'</option>'
- 			<option value="6">'Berwick'</option>'
- 			<option value="7">'India'</option>'
-			<option value="8">'South Africa'</option>'
- 			<option value="9">'Italy'</option>'
-			<option value="10">'Sunway, Malaysia'</option>'
-  			<option value="11">'China'</option>'
+			<option value="1">Clayton</option>
+			<option value="2">Caulfield</option>
+			<option value="3">Peninsula</option>
+ 			<option value="4">Parkville</option>
+			<option value="5">Gippsland</option>
+ 			<option value="6">Berwick</option>
+ 			<option value="7">India</option>
+			<option value="8">South Africa</option>
+ 			<option value="9">Italy</option>
+			<option value="10">Sunway, Malaysia</option>
+  			<option value="11">China</option>
         </select>
       </div>
 	  <div><input type="submit" value="Submit"></div>
