--- a/register.html
+++ b/register.html
@@ -36,6 +36,9 @@
         Welcome! Please enter your details so we can get started. You only have
         to enter your details once, and then go to a club representatitve so have
         them enter you into their club.
+		<br><br>
+		Data can be accessed by the clubs and societys you join, as well as Monash Student Assocation.
+		<br><br>
       </p>
 	  
 	  {% if error %}
