--- a/clubMemberSelector.html
+++ b/clubMemberSelector.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% autoescape off%}
+
 <html lang="en">
   
   <head>
@@ -53,6 +55,7 @@
         </label>
         <input name="year" type="" id="year" value="2013">
       </div>
+	  <input type="checkbox" name="public" id="public" value="public">Partial (Public)<br><br>
 	  <div><input type="submit" value="Submit"></div>
 	  </form>
     </div>
@@ -63,3 +66,4 @@
   </body>
 
 </html>
+{% endautoescape %}
