--- a/explanation.html
+++ b/explanation.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{% autoescape off%}
+
 <html lang="en">
-{% autoescape off %}
   
   <head>
     <meta charset="utf-8">
-    <title> {{ eventName }} - {{clubName}} - {{eventDate}} - {{eventLocation}}
+    <title>
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -16,7 +17,17 @@
       to the bottom of the topbar */ }
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+      </script>
+    <![endif]-->
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="assets/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
     <style>
     </style>
   </head>
@@ -26,7 +37,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-            Monash Club Registration
+              Monash Club Registration
           </a>
           <ul class="nav">
           </ul>
@@ -36,25 +47,13 @@
     <div class="container">
       <div>
         <h1>
-		The {{ nameOfEvent }} organised by {{ clubName }} on the {{ eventDate }} at {{ eventLocation }}
+          Explanation between Ordinary and Associate
         </h1>
-        <p>
-		{{ table }}
-        </p>
       </div>
-    </div>
-	
-	<br><br>
-	
-	I, _____, declare that this is a true record of the attendants at our event, {{ nameOfEvent }} on {{ eventDate }} at {{ eventLocation }}.  <br><br>
 
-	Signed:______________, Date:____________ <br><br>
+	Explanation!
 
-	Number of attendees: {{ numberOfAttendees }} <br>
-	Number of club members: {{ numberOfClubMembers }} <br>
-	Number of clayton students: {{ numberOfClaytonStudents }} <br>
-	Number of MSA card holders: {{ numberOfMSACardHolders }}
-	
+      
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
     </script>
     <script src="assets/js/bootstrap.js">
