More stuff. See changes.

--- a/addMSACard.html
+++ b/addMSACard.html
@@ -55,7 +55,7 @@
         <label for="year">
           Year
         </label>
-        <input name="year" type="" id="year" value="2013">
+        <input name="year" type="" id="year" value="2013" readonly=readonly>
       </div>
 	  <div><input type="submit" value="Submit"></div>
 	  </form>
