--- a/clubMemberSelector.html
+++ b/clubMemberSelector.html
@@ -37,7 +37,7 @@
     <div class="container">
       <div>
         <h1>
-          Add Member
+			Select Club To View
         </h1>
       </div>
 	  <form action="/clubmembers" method="post">
