--- a/addToEvent.html
+++ b/addToEvent.html
@@ -56,6 +56,14 @@
 			{{ events }}
         </select>
       </div>
+	  <div class="control-group">
+        <label for="studentid">
+          Has MSA card?
+        </label>
+        <input type="radio" name="msacardstatus" value="YES" checked=Yes> Has a MSA card<br>
+		<input type="radio" name="msacardstatus" value="NO"> Doesn't have a MSA card
+      </div>
+	  
       <div class="control-group">
         <label for="studentid">
           Student ID
