--- a/viewEventAttendees.html
+++ b/viewEventAttendees.html
@@ -34,6 +34,8 @@
       </div>
     </div>
     <div class="container">
+		<img src="/assets/img/newCSLogo1000Grey.png" width="350" border="0">
+
       <div>
         <h1>
 		The {{ nameOfEvent }} organised by {{ clubName }} on the {{ eventDate }} at {{ eventLocation }}
