Added features requested in 2nd meeting
Please forgive my lack of formating/spelling.
Adjust default to not having a MSA card.
Change club stats to be at the
top of membership page.
change campus on registration to "Managing
Campus"
Increase size of secretary only.
"Only the secretary can access" terms below secretary only.
-Still missing the actual text.
Tick box for terms and conditions.
Restrict personnel to @student.monash.edu, just enter authcate
Add who added the person to the club.
Add a delete personnel page.
Prevented duplicate authcate
-Modify student details if logged in on the
right account.
-added ability to see over 1000 members.

--- a/addPersonnel.html
+++ b/addPersonnel.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% autoescape off%}
+
 <html lang="en">
   
   <head>
@@ -35,7 +37,7 @@
     <div class="container">
       <div>
         <h1>
-          Add Personnell
+          Add Personnel
         </h1>
 		{% if error %}
         <p>
@@ -56,7 +58,7 @@
       </div>
       <div class="control-group">
         <label for="email">
-          Email
+          Authcate
         </label>
         <input name="email" type="" id="email">
       </div>
@@ -70,3 +72,4 @@
   </body>
 
 </html>
+{% endautoescape %}
