--- a/addMember.html
+++ b/addMember.html
@@ -69,8 +69,8 @@
         <label for="studentid">
           Has MSA card?
         </label>
-        <input type="radio" name="msacardstatus" value="YES" checked=Yes> Has a MSA card<br>
-		<input type="radio" name="msacardstatus" value="NO"> Doesn't have a MSA card
+        <input type="radio" name="msacardstatus" value="YES"> Has a MSA card<br>
+		<input type="radio" name="msacardstatus" value="NO" checked=Yes> Doesn't have a MSA card
       </div>
 	  <div class="control-group">
         <label for="studentid">
