--- a/modifyDetails.html
+++ b/modifyDetails.html
@@ -31,16 +31,7 @@
         </div>
       </div>
     </div>
-    <div>
-      <p>
-        Welcome! Please enter your details so we can get started. You only have
-        to enter your details once, and then go to a club representatitve so have
-        them enter you into their club.
-		<br><br>
-		Data can be accessed by the clubs and societys you join, as well as Monash Student Assocation.
-		<br><br>
-      </p>
-	  
+    <div>	  
 	  {% if error %}
         <p>
 			<font color="red">
@@ -55,69 +46,68 @@
 		</font>
 	  </p>
     </div>
-	<form action="/submit?%s" method="post">
+	<form action="/modifyDetails_Submit?%s" method="post">
     <div class="container">
       <div class="control-group">
         <label for="firstname">
           First Name*
         </label>
-        <input id="firstname" name="firstname" type="">
+        <input id="firstname" name="firstname" type="" value='{{ firstname }}'>
       </div>
       <div class="control-group">
         <label for="lastname">
           Last Name*
         </label>
-        <input id="lastname" name="lastname" type="">
+        <input id="lastname" name="lastname" type="" value='{{ lastname }}'>
       </div>
       <div class="control-group">
         <label for="authcate">
-          Authcate* (Example: JDAUS1)
+          Authcate*
         </label>
-        <input id="authcate" name="authcate" type="">
+        <input id="authcate" name="authcate" type="" value='{{ authcate }}' readonly>
       </div>
       <div class="control-group">
         <label for="studentid">
-          Student ID* (Example: 24220450)
+          Student ID*
         </label>
-        <input id="studentid" name="studentid" type="">
+        <input id="studentid" name="studentid" type="" value='{{ studentid }}' readonly>
       </div>
       <div class="control-group">
         <label for="email">
           Email*
         </label>
-        <input id="email" name="email" type="">
+        <input id="email" name="email" type="" value='{{ email }}'>
       </div>
 	  <div class="control-group">
         <label for="address">
           Address*
         </label>
-        <input id="address" name="address" type="">
+        <input id="address" name="address" type="" value='{{ address }}'>
       </div>
       <div class="control-group">
         <label for="phonenumber">
           Phone Number
         </label>
-        <input id="phonenumber" name="phonenumber" type="">
+        <input id="phonenumber" name="phonenumber" type="" value='{{ phoneNumber }}'>
       </div>
 	  <div class="control-group">
         <label for="selectinput1">
           Managing Campus
         </label>
-        <select name="campus" id="campus">
-			<option value="1">Clayton</option>
-			<option value="2">Caulfield</option>
-			<option value="3">Peninsula</option>
- 			<option value="4">Parkville</option>
-			<option value="5">Gippsland</option>
- 			<option value="6">Berwick</option>
- 			<option value="7">India</option>
-			<option value="8">South Africa</option>
- 			<option value="9">Italy</option>
-			<option value="10">Sunway, Malaysia</option>
-  			<option value="11">China</option>
+        <select name="campus" id="campus" value='2'>
+			<option value="1" {{ claytonSelected }}>Clayton</option>
+			<option value="2" {{ caulfieldSelected }}>Caulfield</option>
+			<option value="3" {{ peninsulaSelected }}>Peninsula</option>
+ 			<option value="4" {{ parkvilleSelected }}>Parkville</option>
+			<option value="5" {{ gippslandSelected }}>Gippsland</option>
+ 			<option value="6" {{ berwickSelected }}>Berwick</option>
+ 			<option value="7" {{ indiaSelected }}>India</option>
+			<option value="8" {{ africaSelected }}>South Africa</option>
+ 			<option value="9" {{ italySelected }}>Italy</option>
+			<option value="10" {{ sunwaySelected }}>Sunway, Malaysia</option>
+  			<option value="11" {{ chinaSelected }}>China</option>
         </select>
       </div>
-	  <input type="checkbox" name="TermsAndConditions" value="YES">I have read and accepted the Terms and Conditions above.<br><br>
 	  <div><input type="submit" value="Submit"></div>
     </div>
 	</form>
