--- a/explanation.html
+++ b/explanation.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% autoescape off%}
 
 <html lang="en">
   
@@ -51,7 +50,10 @@
         </h1>
       </div>
 
-	Explanation!
+	Ordinary Membership: Please check your Club's Constitution prior to adding members to your club. Generally, only Clayton Students and Clayton based Monash University Staff members are considered to be Ordinary Members of your club (ie. Voting Members). Some Faculty or Halls of Residence clubs have restricted Ordinary Membership to students enrolled in a specified course/unit of study or living at a specified Hall of Residence.
+	<br><br>
+	Associate Membership: Please check your Club's Constitution prior to adding members to your club. Generally, anyone who is not a Clayton Student or Clayton based Monash University Staff members must be an Associate Member of your club (ie. Non-voting Members). Some Faculty of Hall of Residence clubs restrict Ordinary Membership to students enrolled in a specified course/unit of study or living at a Specified Hall of Residence. Any student joining a club who has restricted Ordinary Membership and does not meet the criteria of Ordinary Membership must be an Associate Member of the club.
+
 
       
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
@@ -61,4 +63,3 @@
   </body>
 
 </html>
-{% endautoescape %}
