--- a/addPersonnel.html
+++ b/addPersonnel.html
@@ -62,6 +62,12 @@
         </label>
         <input name="email" type="" id="email">
       </div>
+      <div class="control-group">
+        <label for="name">
+          Name
+        </label>
+        <input name="name" type="" id="name">
+      </div>
 	  <div><input type="submit" value="Submit"></div>
 	  </form>
     </div>
