--- a/clubEmailSelector.html
+++ b/clubEmailSelector.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% autoescape off%}
+
 <html lang="en">
   
   <head>
@@ -25,7 +27,7 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="/">
-            Monash Club Registration
+              Monash Club Registration
           </a>
           <ul class="nav">
           </ul>
@@ -35,15 +37,26 @@
     <div class="container">
       <div>
         <h1>
-		{{ nameOfClub }}
+			Select Club Emails
         </h1>
-        <p>
-		{% autoescape off%}
-		{{ table }}
-		{% endautoescape %}
-
-        </p>
       </div>
+	  <form action="/clubEmails" method="post">
+      <div class="control-group">
+        <label for="selectinput1">
+          Club
+        </label>
+        <select name="clubinput" id="clubinput">
+			{{ clubs }}
+        </select>
+      </div>
+	  <div class="control-group">
+        <label for="year">
+          Year
+        </label>
+        <input name="year" type="" id="year" value="2013">
+      </div>
+	  <div><input type="submit" value="Submit"></div>
+	  </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
     </script>
@@ -52,3 +65,4 @@
   </body>
 
 </html>
+{% endautoescape %}
