--- a/modifyDetails.html
+++ b/modifyDetails.html
@@ -80,7 +80,7 @@
       </div>
 	  <div class="control-group">
         <label for="address">
-          Address*
+          Address
         </label>
         <input id="address" name="address" type="" value='{{ address }}'>
       </div>
