--- a/register.html
+++ b/register.html
@@ -33,7 +33,18 @@
     </div>
     <div>
       <p>
-        Welcome! Please enter your details so we can get started. You only have
+
+	  
+	  <p>
+	  <font color="red">
+	  
+		</font>
+	  </p>
+    </div>
+	<form action="/submit?%s" method="post">
+    <div class="container">
+	
+		Welcome! Please enter your details so we can get started. You only have
         to enter your details once, and then go to a club representatitve so have
         them enter you into their club.
 		<br><br>
@@ -48,15 +59,8 @@
 			</font>
 		</p>
       {% endif %}
-	  
-	  <p>
-	  <font color="red">
-	  
-		</font>
-	  </p>
-    </div>
-	<form action="/submit?%s" method="post">
-    <div class="container">
+		
+	
       <div class="control-group">
         <label for="firstname">
           First Name*
@@ -70,14 +74,27 @@
         <input id="lastname" name="lastname" type="">
       </div>
       <div class="control-group">
+        <label for="selectinput1">
+          Type
+        </label>
+        <select name="personType" id="personType">
+			<option value="1">Student</option>
+			<option value="2">Staff</option>
+			<option value="3">Non-Student</option>
+        </select>
+      </div>
+	
+	If you are a non student, please ignore the Authcate field, and use your phone number as a Student ID.
+
+      <div class="control-group">
         <label for="authcate">
-          Authcate* (Example: JDAUS1)
+          Authcate*
         </label>
         <input id="authcate" name="authcate" type="">
       </div>
       <div class="control-group">
         <label for="studentid">
-          Student ID* (Example: 24220450)
+          Student ID*
         </label>
         <input id="studentid" name="studentid" type="">
       </div>
@@ -89,7 +106,7 @@
       </div>
 	  <div class="control-group">
         <label for="address">
-          Address*
+          Address
         </label>
         <input id="address" name="address" type="">
       </div>
