--- a/showMemberStatus.html
+++ b/showMemberStatus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   
   <head>
@@ -15,11 +16,10 @@
       to the bottom of the topbar */ }
     </style>
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    
     <style>
     </style>
   </head>
-  
   <body>
     <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
@@ -32,23 +32,52 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div>
-        <h1>
-		{{ nameOfClub }}
-        </h1>
+    <div>	  
+	  {% if error %}
         <p>
-		{% autoescape off%}
-		{{ table }}
-		{% endautoescape %}
-
-        </p>
-      </div>
+			<font color="red">
+				{{ error }}
+			</font>
+		</p>
+      {% endif %}
+	  
+	  <p>
+	  <font color="red">
+	  
+		</font>
+	  </p>
     </div>
+	<form action="/modifyDetails_Submit?%s" method="post">
+    <div class="container">
+		Name: {{ name }}<br>
+		Authcate: {{ authcate }}<br>
+		Student ID (Phone Number For Non-Students): {{ studentID }}<br>
+		Email: {{ email }}<br>
+		Address: {{ address }}<br>
+		Campus: {{ campus }}<br>
+		Phone Number: {{ phoneNumber }}<br>
+		Type: {{ type }}<br><br>
+		MSA Member Status: {{ MSAMemberStatus }}<br><br>
+		<table border="1">
+		<tr>
+		<th>Club</th>
+		<th>Year</th>
+		<th>Added By</th>
+		<th>Added On</th>
+		</tr>
+		{% autoescape off%}
+			{{ memberships }}
+		{% endautoescape %}
+		</table>
+    </div>
+	</form>
+	
+    <style>
+      
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
     </script>
     <script src="assets/js/bootstrap.js">
     </script>
   </body>
-
 </html>
